Stabilize migrator from AP, Enable Serialization of Filters